Fix pagination overflowing on smaller screens (#686)
* Fix pagination overflowing on smaller screens

--- a/app/assets/stylesheets/logixRelease.css
+++ b/app/assets/stylesheets/logixRelease.css
@@ -130,3 +130,35 @@ a.btn.btn-outline-danger {
 #error_explanation h2 {
     font-size: 1.25rem;
 }
+
+.pagination .page-link {
+    white-space: nowrap;
+}
+
+@media (max-width: 992px) {
+    .pagination-cont {
+        overflow-x: auto;
+        padding: 0;
+    }
+
+    .pagination {
+        overflow-x: visible;
+        max-width: none;
+        display: block;
+        padding: 0;
+        white-space: nowrap;
+    }
+
+    .pagination > * {
+        display: inline-block;
+        margin: 0;
+        margin-left: -4px;
+    }
+}
+a.btn.btn-outline-primary {
+    margin-top: 10px;
+}
+
+a.btn.btn-outline-danger {
+    margin-top: 10px;
+}
